...
    private static let revenueCatAPIKeyInfoDictionaryKey = "REVENUECAT_API_KEY"
    private static let revenueCatEntitlementIDEnvironmentName = "REVENUECAT_ENTITLEMENT_ID"
    private static let revenueCatEntitlementIDInfoDictionaryKey = "REVENUECAT_ENTITLEMENT_ID"
    private static let revenueCatProductIDEnvironmentName = "REVENUECAT_PRODUCT_ID"
    private static let revenueCatProductIDInfoDictionaryKey = "REVENUECAT_PRODUCT_ID"
    #if DEBUG
    private static let forceProUnlockEnvironmentName = "SCREENSHOT_FORCE_PRO_UNLOCK"
    #endif
    private static let fallbackEntitlementId = "Nineva Studios / ScreenshotBro Pro"
    private static let fallbackProductId = "proversion"
    #if DEBUG
    private static let debugFallbackAPIKey = "test_KgNxrrXqBIGgiORjBPsdiXrraJL"
    #endif
...
